<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/preference_user" >
        <EditTextPreference
            android:dialogTitle="@string/preference_username_dialog_title"
            android:title="@string/preference_username_title"
            android:key="username" />
        <EditTextPreference
            android:dialogTitle="@string/preference_user_reset_title_dialog_title"
            android:title="@string/preference_user_reset_title_title"
            android:summary="@string/preference_user_reset_title_summary"
            android:key="reset_title" />
        <EditTextPreference
            android:dialogTitle="@string/preference_user_reset_message_dialog_title"
            android:title="@string/preference_user_reset_message_title"
            android:summary="@string/preference_user_reset_message_summary"
            android:key="reset_message" />
        
        <CheckBoxPreference
            android:title="@string/preference_user_show_ranking_title"
            android:summary="@string/preference_user_show_ranking_summary"
            android:defaultValue="true"
            android:key="show_ranking" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_debug" >
	    <EditTextPreference
	        android:dialogTitle="@string/preference_debug_dialog_title"
	        android:title="@string/preference_debug_title"
	        android:summary="@string/preference_debug_summary"
	        android:key="debug_editText" />
	    
	    <EditTextPreference
	        android:dialogTitle="@string/preference_debug_change_server_dialog_title"
	        android:title="@string/preference_debug_change_server_title"
	        android:summary="@string/preference_debug_change_server_summary"
	        android:key="debug_change_server" />
    </PreferenceCategory>

</PreferenceScreen>
