<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/days"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="50sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_days"
	        android:textSize="50sp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/hours"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_hours"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/minutes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_minutes"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/seconds"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_seconds"
	        android:textSize="20sp" />
    </TableRow>
    
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TableRow
        android:id="@+id/goal_left_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView
	        android:text="@string/goal_left_1" />
	    <TextView
	        android:text="@string/goal_left_2" />
	    <TextView
	        android:id="@+id/goal_left" />
    </TableRow>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    
	    <WebView
	        android:id="@+id/webview_ranking"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/button_check_ranking"
	        android:layout_alignParentTop="true"
	        android:visibility="gone" />
	 
        <ImageButton
            android:background="@drawable/ranking"
            android:id="@+id/button_check_ranking"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_above="@+id/button_start_stop"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/button_check_ranking" />

        <ImageButton
            android:background="@drawable/car_icon"
            android:id="@+id/button_send_record"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_above="@+id/button_start_stop"
            android:layout_toLeftOf="@+id/button_check_ranking"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/button_send_record" />
	
	    <Button
	        android:id="@+id/button_start_stop"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true" />
    </RelativeLayout>
    
</LinearLayout>